--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<h1>测试</h1>
-<a href="test.html">跳转</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h1 {
+            text-decoration-color: aqua;
+            color: #e80f0f;
+        }
+        
+        a {
+            text-transform: capitalize;
+            color: #da1111;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>测试</h1>
+    <a href="test.html">跳转</a>
+</body>
+
+</html>
