--- a/test.html
+++ b/test.html
@@ -1,1 +1,24 @@
-<h1>测试齐旺达多</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h1 {
+            text-decoration-color: aqua;
+        }
+        
+        a {
+            text-transform: capitalize;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>测试</h1>
+    <a href="test.html">跳转</a>
+</body>
+
+</html>
