--- a/index.html
+++ b/index.html
@@ -3,24 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>Document</title>
-    <style>
-        h1 {
-            text-decoration-color: aqua;
-            color: #e80f0f;
-        }
-        
-        a {
-            text-transform: capitalize;
-            color: #da1111;
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <h1>测试</h1>
-    <a href="test.html">跳转</a>
+
 </body>
 
 </html>
