--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>Document</title>
+    <title>heading</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <div>你好</div>
+	<header class = "heading">
+		<nav class = "nav-heading"><!--nav ：用于定义导航栏-->
+			<ul class = "menu-nav-heading">
+				<li>
+					<a href = "#" data-target = "home">主页</a>
+				</li>
+				<li>
+					<a href = "#" data-target = "article">文章</a>
+				</li>
+				<li>
+					<a href = "#" data-target = "Personal-Profile">个人简介</a>
+				</li>
+				<li>
+					<a href = "#" data-target = "test">测试</a>
+				</li>
+				<li>
+					<a href = "#" data-target = "a">关于</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </body>
 
 </html>
