--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>heading</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 </head>
 
 <body>
@@ -27,11 +27,17 @@
                     <a href="#" data-target="test">测试</a>
                 </li>
                 <li>
-                    <a href="#" data-target="a">关于</a>
+                    <a href="#" data-target="about">关于</a>
                 </li>
             </ul>
         </nav>
     </header>
-</body>
 
+<div id = "home" class = "page">home</div>
+<div id = "article" class = "page">article</div>
+<div id = "Personal-Profile" class = "page">Personal-Profile</div>
+<div id = "test" class = "page">test</div>
+<div id = "about" class = "page">about</div>
+<script src="js/index.js"></script>
+</body>
 </html>
