--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="heading">
-        <nav class="nav-heading">
+        <!--<nav class="nav-heading">-->
             <!--nav ：用于定义导航栏-->
             <ul class="menu-nav-heading">
                 <li>
@@ -30,7 +30,7 @@
                     <a href="#" data-target="about">关于</a>
                 </li>
             </ul>
-        </nav>
+        <!--</nav>-->
     </header>
 
 <div id = "home" class = "page">home</div>
